[feat] Added basic pricing plan section header + [fix] horizontal scroller hidden

--- a/webapp-boilerplate/src/app/globals.css
+++ b/webapp-boilerplate/src/app/globals.css
@@ -24,6 +24,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    
+  
+    overflow-x: hidden;
+    
 }
 
 @layer utilities {
@@ -46,4 +50,17 @@ body {
 
 .font-extrabold {
   font-weight: 800;
+}
+
+@keyframes fadeInOut {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+}
+
+.animate-fade {
+  animation: fadeInOut 2.5s infinite;
 }
